--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       itemprop="image"
       content="https://raw.githubusercontent.com/abhishobhashana/weather/master/public/Preview.jpg"
     />
-    <meta property="og:url" content="https://map-gl.netlify.app" />
+    <meta property="og:url" content="https://weather-gl.netlify.app" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Weather" />
     <meta property="og:description" content="Weather" />
